Doc changes given code changes
Changes have recently been done on the code. This commit reflects those
changes in the doc. Also address first draft review suggesting there
might be too much code detail in the doc.

--- a/doc/design.tex
+++ b/doc/design.tex
@@ -8,7 +8,7 @@ The purpose of this chapter is to describe how the software is designed based on
 \label{sec:design:overview}
 The software will take a dynamic approach to determine the time complexity of the algorithm under test. The algorithm will be run with inputs of different size $n$, while at the same time recording how long is spent in each measured method and how many times each measured method is called.
 
-\noindent Only the methods the end user thinks are relevant are measured and for each one of them their time complexity is calculated. The reasoning behind this is that measuring the time complexity method by method is more accurate than measuring the whole algorithm's while also not increasing the time needed for the dynamic analysis. It's then trivial to work out the time complexity of the whole algorithm based on the time complexity of the measured methods that compose it.
+\noindent Only the methods the end user thinks are relevant are measured and for each one of them their time complexity is calculated. The assumption that the dissertation tries to verify is that measuring the time complexity method by method is faster and potentially more accurate than measuring the whole algorithm. It's then trivial to work out the time complexity of the whole algorithm based on the time complexity of the measured methods that compose it.
 
 \noindent In order to ensure low coupling and high cohesion \cite{EYC79}, the software will be divided in different modules, each one with a different responsibility. Classes within each module will honour the same principles. This will bring several advantages:
 \begin{itemize}
@@ -114,7 +114,7 @@ This module doesn't contain any implementation, only Java annotations. A Java an
 
 \section{Agent}
 \label{sec:design:agent}
-This module contains the logic to instrument the algorithm under test. First the agent will detect which methods need to be instrumented based on annotations, whitelists and blacklists. Secondly the agent will instrument each of these methods by measuring the time passed during the method execution. This number will then be passed to the time recorder implementation (see next sections) which will take care of storing it for later processing.
+This module contains the logic to instrument the algorithm under test. First the agent will detect which methods need to be instrumented based on annotations, whitelists and blacklists. Secondly the agent will instrument each of these methods by measuring the time passed during the method execution. This information will then be passed to the time recorder implementation (see next sections) which will take care of storing it for later processing.
 
 \noindent The built agent is a JAR\footnote{https://docs.oracle.com/javase/8/docs/technotes/guides/jar/jarGuide.html} file which will need to be attached to the system by passing \code{-javaagent:jarpath[=options]}\footnote{https://docs.oracle.com/javase/8/docs/api/java/lang/instrument/package-summary.html} on the command-line, where \code{jarpath} is the path to the agent JAR while \code{options} are the options, such as whitelists and blacklists. This will instrument the algorithm under test at runtime when the instrumented methods are used for the first time.
 
@@ -127,7 +127,7 @@ This module defines the API needed for time recording. The API will need to prov
   \item \textbf{Stop}: used by the system just after the algorithm is done running. This will shut down the time recorder implementation and return all the recorded data
 \end{itemize}
 
-\noindent The recorded data is returned in form of a raw call tree. Each node in the tree has an associated measurement. For the context of this dissertation, a measurement consists of how long is spent in a method and how many times the method is called.
+\noindent Once all the rounds have run, the recorded data is processed and returned in form of a raw call tree.
 
 \noindent Defining an API for time recording will keep the interface separated from the implementation so that the whole system works without needing to know the inner workings of the time recorder implementation. This allows easily swapping and comparing different implementations, which will be very useful in order to fine-tune them. On top of that developers can easily attempt building their own implementation in order to improve the existing one or to fine tune it for their specific use case. Because the implementation is probably the most delicate part of the whole system (as it needs to be accurate while ensuring a limited observer effect), being able to change the implementation must be an easy task.
 
@@ -140,11 +140,13 @@ This module implements the time recorder API described in the previous section. 
 This module is responsible for analysing the data captured by the time recorder. It does so in 7 different steps:
 \begin{enumerate}
   \item \textbf{Warm-up}: run some rounds and ignore the recorded data. This will instrument all the methods that need to be measured, which will make the algorithm under test run slightly slower. The end user will be able to choose how many warm-up rounds to have (could be zero)
-  \item \textbf{Record}: run the recording rounds. The rounds are run with different $n$ and each will produce a call tree measured by the time recorder. The end user will be able to choose what $n$'s to use and how many rounds to run for each $n$
-  \item \textbf{Aggregate}: for each $n$ there are now several call trees. The aggregation will, for each $n$, take the set of call trees and transform it into one single call tree, where each node in it contains the associated set of measurements
-  \item \textbf{Clean up and average}: there are now several measurements in each node in each call tree, some of which are far from the average for that node (outliers) and can be removed. The remaining measurements in each node are averaged together so that there is only one value per node in each call tree. The end user will be able to choose the upper limit of how many outliers to exclude (could be zero)
-  \item \textbf{Normalise}: each node in the call tree now contains information about how many times it has been called and how much total time has been spent inside that method. Because of the simple nature of the time recorder, each node is affected by other nodes in the same branch. The number of times it has been called is affected by the number of times its parent has been called while the time spent inside the method is affected by the time spent in its children too. The normalisation process takes the call tree in raw format (see Figure \ref{fig:rawcalltree}) and ensures that each node only contains data related to that specific node (see Figure \ref{fig:normalisedcalltree})
-  \item \textbf{Interpolate}: there is now a normalised call tree for each $n$ with one measurement per node. For each node in a call tree, the same node can be found in another call tree that is associated to a different $n$, simply by following the same path in the trees. Interpolation is the act of finding a curve that best approximates the relationship between these nodes across different call trees, i.e. a function $f(n)$ that takes $n$ as input and returns the measurement as output (see example in Figure \ref{fig:interpolatedcalltree}). This function accurately describes the time complexity of the corresponding method
+  \item \textbf{Record}: run the recording rounds. The rounds are run with different $n$ and each will produce a raw call tree measured by the time recorder. The end user will be able to choose what $n$'s to use and how many rounds to run for each $n$
+  \item \textbf{Sequence}: each round that has run now has a corresponding raw call tree. Sequencing will take all the rounds for a specific $n$ and generate a single tree with a list of measurements in each node
+  \item \textbf{Clean Up}: there are now several measurements in each node in each raw call tree, some of which are far from the average for that node (outliers) and are removed in this step. The end user will be able to choose the upper limit of how many outliers to exclude (could be zero)
+  \item \textbf{Average}:  the remaining measurements in each node are averaged together so that there is only one value per node in each call tree
+  \item \textbf{Normalise}: each node in the raw call tree now contains a measurement, which contains information about how many times it has been called and how much total time has been spent inside that method. Because of the simple nature of the time recorder, each node is affected by other nodes in the same tree branch. The number of times it has been called is affected by the number of times its parent has been called while the time spent inside the method is affected by the time spent in its children too. The normalisation process takes the call tree in raw format (see Figure \ref{fig:rawcalltree}) and ensures that each node only contains data related to that specific node (see Figure \ref{fig:normalisedcalltree})
+  \item \textbf{Aggregate}: for each $n$ there is now one normalised call tree. The aggregation will take these trees and generate a single tree with a map in each node. The map keys represent $n$ while the values represent the normalised measurement for the corresponding key
+  \item \textbf{Interpolate}: interpolation is the act of finding a curve that best approximates the relationship between $n$ and the corresponding normalised measurement, i.e. a function $f(n)$ that takes $n$ as input and returns the measurement as output (see example in Figure \ref{fig:interpolatedcalltree}). This function accurately describes the time complexity of the corresponding method in that specific call path (i.e. tree branch)
   \item \textbf{Calculate time complexity}: there is now one single call tree with a function $f(n)$ per node approximating the measurement of the corresponding method as a function of $n$. The time complexity can be calculated, describing the whole algorithm as a function of $n$ by simply navigating through the tree
 \end{enumerate}
 
@@ -159,4 +161,4 @@ This is the algorithm that is under test and that will be analysed. It can have 
 
 \section{Time complexity analyser}
 \label{sec:design:timecomplexityanalyser}
-This module puts everything together. It takes the time recording implementation and the algorithm under test and then uses the time complexity analysis SDK to calculate the algorithm's time complexity. This is where the end user can tweak the analysis by changing what SDK parameters and what time recorder implementation to use (and with what parameters, if there are any).
+This module puts everything together. It takes the time recording implementation and the algorithm under test and then uses the time complexity analysis SDK to calculate the algorithm's time complexity. This is where the end user can tweak the analysis by changing what SDK parameters, what time recorder implementation to use and what test to run for each round and each given $n$.
