--- a/doc/case-studies.tex
+++ b/doc/case-studies.tex
@@ -1,2 +1,14 @@
 \chapter{Case studies}
-TODO
+
+\section{Overview}
+\label{sec:casestudies:overview}
+TODO by 25/09
+
+\section{First}
+
+TODO by 28/08
+
+
+\section{Second}
+
+TODO by 25/09
