--- a/doc/design.tex
+++ b/doc/design.tex
@@ -2,7 +2,7 @@
 
 The purpose of this chapter is to describe how the software is designed based on the requirements specified in the previous chapter. Section \ref{sec:design:overview} gives a design overview and introduce the concept of module and the motivations for adopting this structure. Sections \ref{sec:design:annotations}-\ref{sec:design:timecomplexityanalyser} will each describe one of the modules that make up the whole software.
 
-% TODO: why Java? Comfortable with it, easy instrumentation, generics, Akka, compatible with Scala (maybe not in this chapter)
+% TODO by 25/09: why Java? Comfortable with it, easy instrumentation, generics, Akka, compatible with Scala (maybe not in this chapter)
 
 \section{Overview}
 \label{sec:design:overview}
