--- a/doc/implementation.tex
+++ b/doc/implementation.tex
@@ -5,7 +5,7 @@ This chapter discusses how the software has been implemented. Section \ref{sec:i
 \section{Overview}
 \label{sec:implementation:overview}
 
-TODO:
+TODO by 17/07:
 \begin{itemize}
   \item Discuss requirements... measure observer effect
   \item Discuss precision and speed
@@ -269,25 +269,25 @@ Some classes are pre-loaded in the JVM, such as some of the classes that are par
 \section{Time recorder API}
 \label{sec:implementation:timerecorderapi}
 
-TODO
+TODO by 18/07
 
 
 \section{Time recorder implementation}
 \label{sec:implementation:timerecorderimplementation}
 
-TODO
+TODO by 21/07
 
 
 \section{Time complexity analysis SDK}
 
-TODO
+TODO by 07/08
 
 
 \section{Algorithm under test}
 
-TODO
+TODO by 14/08
 
 
 \section{Time complexity analyser}
 \label{sec:implementation:timecomplexityanalyser} 
-TODO
+TODO by 21/08
