--- a/doc/introduction.tex
+++ b/doc/introduction.tex
@@ -1,19 +1,19 @@
 \chapter{Introduction}
 
 \section{Motivation}
-TODO
+TODO by 02/10
 
 \section{Objectives}
-TODO
+TODO by 02/10
 
 \section{Theory}
-TODO:
+TODO by 02/10:
 \begin{itemize}
   \item Explain approach principle - measuring time spent each method instead of measuring the whole project for each input of size $n$ and the assumed advantages of using this approach
 \end{itemize}
 
 \section{Challenges}
-TODO:
+TODO by 02/10:
 \begin{itemize}
   \item Explain the challenges that arise by measuring a multitude of methods
 \end{itemize}
