--- a/doc/requirements-analysis.tex
+++ b/doc/requirements-analysis.tex
@@ -417,7 +417,7 @@ Often there are methods that are called very frequently and are very quick (e.g.
 The profiler needs to be able to handle and store a vast number of measurements without running out of memory and space on disk.
 
 
-\noindent TODO: more?
+\noindent TODO by 25/09: more?
 
 \section{Analysis}
 \label{sec:requirementanalysis:analysis}
@@ -451,4 +451,4 @@ Because the software analyses the methods in isolation, it only needs to fit the
 \end{itemize}
 
 
-\noindent TODO: more?
+\noindent TODO by 25/09: more?
